# file_saver_ffi.flutter

./: CHANGELOG.md  README.md  WEB_LIMITATIONS.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
darwin/: file_saver_ffi.podspec
darwin/Classes/FileSaver/: FileSaver.swift
example/: pubspec.yaml
example/android/app/: build.gradle.kts  proguard-rules.pro
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/core/: core.dart  demo_save_mixin.dart  file_type_config.dart  file_utils.dart  media_saver_mixin.dart  save_demo_common.dart  types.dart  utils.dart  widgets.dart
example/lib/helper/: perm_helper.dart
example/lib/screens/: home_screen.dart  open_write_screen.dart  path_location_screen.dart  save_as_screen.dart  save_bytes_screen.dart  save_file_screen.dart  save_multi_network_screen.dart  save_network_screen.dart  save_screen.dart  screens.dart
example/lib/tabs/: file_tab.dart  image_tab.dart  video_tab.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  (+1 more)
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: file_saver_ffi.podspec
lib/: file_saver_ffi.dart
tool/: ffigen.dart  jnigen.dart
windows/: CMakeLists.txt  file_saver_ffi_plugin_c_api.cc
windows/include/file_saver_ffi/: file_saver_ffi_plugin_c_api.h
(+79 files in other folders)
